Fixed layout bug on frontpage (headers where grouped with previous list, versus next one)

--- a/css/jilles-net.css
+++ b/css/jilles-net.css
@@ -21,6 +21,8 @@ h3 { margin-bottom: 5px; font-size: 1.2em;}
 .content p { margin: 0 0 15px 0;  }
 .content ul, .content ol { margin: 0 0 0 20px; }
 .content > ul, .post > ul { margin: 0 0 15px 20px; }
+ul > h3 { margin: 15px 0 0 0; }
+
 
 blockquote { margin: 1em 2em; padding-left: 20px; border-left: 2px dashed #999; font-family: 'Courier New','Courier'; font-size: 0.8em;}
 hr{margin:12px 0 12px 0;color:#DDD;background:#DDD;height:1px;border:none;}
